--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,12 @@ project(liszt_cxx)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(liszt_cxx main.cpp)
+add_subdirectory(util)
+list(APPEND EXTRA_LIBS ArrayUtils)
+list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/util")
+
+add_executable(MoveZeros MoveZeros.cpp)
+
+target_link_libraries(MoveZeros PUBLIC ${EXTRA_LIBS} ArrayUtils)
+target_include_directories(MoveZeros PUBLIC ${EXTRA_INCLUDES})
+
