changed by fsindustry@2022/06/27 about cmake project skeleton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,12 @@ project(liszt_cxx)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(liszt_cxx main.cpp)
+# add util liberaries and includes here
+add_subdirectory(util)
+list(APPEND EXTRA_LIBS ArrayUtils)
+list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/util")
+
+# test executable binary
+add_executable(hello main.cpp)
+target_link_libraries(hello PUBLIC ${EXTRA_LIBS})
+target_link_directories(hello PUBLIC ${PROJECT_SOURCE_DIR}/util)
