changed by fsindustry@2022/06/28 about 对撞指针

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ list(APPEND EXTRA_LIBS ArrayUtils)
 list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/util")
 
 # test executable binary
-add_executable(hello main.cpp array/_167/TwoSumII.cpp array/_125/ValidPalindrome.cpp array/_344/ReverseString.cpp array/_345/ReverseVowels.cpp array/_11/ContainerWithMostWater.cpp)
+add_executable(hello main.cpp)
 target_link_libraries(hello PUBLIC ${EXTRA_LIBS})
 target_link_directories(hello PUBLIC ${PROJECT_SOURCE_DIR}/util)
