committed by fsindustry@2022/09/05 about binary tree traverse;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ list(APPEND EXTRA_LIBS ArrayUtils)
 list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/util")
 
 # test executable binary
-add_executable(hello binarytree/_222/CountCompleteTreeNodes.cpp binarytree/_110/BalancedBinaryTree.cpp)
+add_executable(hello queue/_126/WordLadderII.cpp)
 target_link_libraries(hello PUBLIC ${EXTRA_LIBS})
 target_link_directories(hello PUBLIC ${PROJECT_SOURCE_DIR}/util)
