--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ list(APPEND EXTRA_LIBS ArrayUtils)
 list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/util")
 
 # test executable binary
-add_executable(hello dp3_BuyAndSellStock/_309/BestTimeToBuyAndSellStockWithCooldown.cpp)
+add_executable(hello dp3_BuyAndSellStock/_309/BestTimeToBuyAndSellStockWithCooldown.cpp dp3_BuyAndSellStock/_714/BestTimeToBuyAndSellStockWithTransactionFee.cpp)
 target_link_libraries(hello PUBLIC ${EXTRA_LIBS})
 target_link_directories(hello PUBLIC ${PROJECT_SOURCE_DIR}/util)
